Fixed location alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,7 +13,7 @@
 body {
     background-color: var(--navy);
     width: 100%;
-    height: 100%;
+    height: 100vh;
     margin: 0;
     font-size: 16pt;
     font-weight: 300 !important;
@@ -157,12 +157,13 @@ button:hover {
 
 /*footer*/
 .footer {
+    margin-top: auto; /* Pushes footer to the bottom */
     display: flex;
     background-color: var(--lime);
     width: 100%;
     align-items: center;
     font-size: 16pt;
-    padding: 20px 0 20px 0;
+    padding: 0;
 }
 
 .icon-img {
@@ -319,13 +320,12 @@ button:hover {
 }
 
 #location-div {
-    display:flex; 
+    display: flex; 
     flex-direction: row; 
     align-items: end;
     height: 65%;
     width: 90%;
-    margin-right: 50px;
-    margin-left: auto;
+    margin: 35px 50px 0 auto; 
     color: white;
     justify-content: flex-end;
     font-size: 16pt;
